# wire-python

./: .gitignore  CHANGELOG.md  LICENSE  README.md  RELEASING.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/wire/: __init__.py  errors.py  http.py  models.py  pagination.py  resources.py  webhooks.py
tests/: server.py  test_client.py  test_errors.py  test_resources.py  test_webhooks.py
tests/data/: webhook-signatures.json
